# Python-Practice

./: #tinkering_with_emacs.py#  .Algorithms_Practice.py.un~  .Playground.py.swo  .Playground.py.swp  .gitignore  .test_vim.py.un~  .vim.py.un~  00_Change_Names_Files_With_Underscores_For_Spaces.Py  01 Find a pair with the given sum in an array.py  01 Little Sister's Vocabulary.py  01 Meltdown Mitigation exercise Exercisim.py  01_Find_A_Pair_With_The_Given_Sum_In_An_Array.py  02 Currency Exchange Exercism.py  02_Currency_Exchange_Exercism.py  03 Ghost Gobble Arcade Game.py  03_Ghost_Gobble_Arcade_Game.py  04 Zero Sum Subarray.py  04_Zero_Sum_Subarray.py  05_Guido'S_Gorgeous_Lasagna.py  06_Meltdown_Mitigation.py  07_Grains_-_Exercise_From_Exercisim.py  08_Stop_Gninnips_My_Sdrow_Problem_Codewars.py  09 Find_The_Parity_Outlier.py  09_Find_The_Parity_Outlier.py  10 Bouncing_Balls_CodeWars.py  100 multiprocessing practice.py  100_Multiprocessing_Practice.py  101 Pandas pratice.py  102 download youtube mp3.py  102_Download_Youtube_Mp3.py  103 Find Nums Easy Exercise.py  104.py  104_Simple_Todo_Cli_App.py  105.py  10_Bouncing_Balls_Codewars.py  11_Delete_Occurrences_Of_An_Element_If_It_Occurs_More_Than_N_Times.py  13 dic 2023.ipynb  14_Where_my_anagrams_at.py  15_Playing_with_digits_Codewars.py  16_The_100_Doors_RosettaCode.py  (+406 more)
.ipynb_checkpoints/: 72_Playground_Notebook-checkpoint.ipynb
.streamlit/: secrets.toml
.virtual_documents/: Playground_Notebook.ipynb  (+8 more)
justext-4.3/: CHANGES  COPYING  README.md  pyproject.toml
justext-4.3/justext/: __init__.py  core.py
justext-4.3/justext.egg-info/: PKG-INFO
(+361 files in other folders)
