[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "justext"
version = "4.3"
authors = [
    {name = "Jan Pomikálek", email = "jan.pomikalek@gmail.com"},
    {name = "Vít Suchomel", email = "support@sketchengine.co.uk"},
    {name = "Ondřej Herman", email = "support@sketchengine.co.uk"},
]
description = """Heuristic based boilerplate removal tool –
jusText is a tool for removing boilerplate content,
such as navigation links, headers, and footers from HTML pages.
It is designed to preserve mainly text containing full sentences
and it is therefore well suited for creating linguistic resources
such as Web corpora."""
readme = "README.md"
requires-python = ">=3.6"
keywords = ["boilerplate", "text extraction", "HTML to text"]
license = {text = "BSD"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "lxml >= 4.1",
    "html5_parser",
]

[project.scripts]
justext = "justext.core:main"

[project.urls]
source = "https://corpus.tools/wiki/Justext"
documentation = "https://corpus.tools/wiki/Justext"

[tool.setuptools]
packages = ["justext"]
